--- a/projeto-one-piece/index.html
+++ b/projeto-one-piece/index.html
@@ -22,7 +22,7 @@
 <body>
     <main class="personagens">
         <div class="personagem">
-            <img src="./src/imagens/personagem-tony-chopper.png" alt="Personagem Tony Chopper" />
+            <img src="./src/imagens/personagem-tony-chopper.png" alt="Personagem Tony Chopperr" />
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Tony Chopper</h2>
