--- a/projeto-one-piece/index.html
+++ b/projeto-one-piece/index.html
@@ -56,8 +56,7 @@
                     "Chapéu de Palha",é o fundador, capitão e combatente mais forte dos cada vez mais infames e
                     poderosos Piratas do Chapéu de Palha. Ele busca destemidamente o lendário tesouro do
                     falecido Gol D. Roger para se tornar o novo Rei dos Piratas,[29] e realizar um sonho ainda não
-                    revelado (atualmente conhecido apenas por sua tripulação e amigos mais próximos). Ele
-                    acredita que ser o Rei dos Piratas significa ter a maior liberdade do mundo.
+                    revelado (atualmente conhecido apenas por sua tripulação e amigos mais próximos).
                 </p>
             </div>
         </div>
